# engine_android_usage

./: .gitmodules  README.md
app/: build.gradle
app/jni/: CMakeLists.txt
app/jni/src/: CMakeLists.txt  PauseGUILayer.cpp  PauseGUILayer.h  Play3DSceneLayer.cpp  Play3DSceneLayer.h  PlayGUILayer.cpp  PlayGUILayer.h  main.cpp
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/TestWorld/: 001.dae  002.dae  003.dae  004.dae  005.dae  006.dae  007.dae  008.dae  009.dae  010.dae  011.dae  012.dae  013.dae  014.dae  015.dae  016.dae  017.dae  018.dae  019.dae  020.dae  021.dae  022.dae  023.dae  024.dae  025.dae  026.dae  027.dae  028.dae  029.dae  030.dae  031.dae  032.dae  033.dae  034.dae  035.dae  036.dae  037.dae  038.dae  039.dae  040.dae  (+60 more)
app/src/main/assets/models/garbage/: CapsuleCapsule.dae  CollisionCube.dae  Cube.dae  CubeBox.dae  CubeCapsule.dae  CubeSphere.dae  PlayerCapsule.dae  SphereSphere.dae  SphereSphere.fbx  collisionsAnim.dae  cube_text.dae  wall.dae
app/src/main/assets/models/scene1/: ball1.dae  ground1.dae  ground2.dae
app/src/main/assets/shaders/GLES/: AnimatedModel.frag  AnimatedModel.vert  AnimationSunLight.frag  AnimationSunLight.vert  AnimationSunLightShadowMap.frag  AnimationSunLightShadowMap.vert  AnimationSunLightShadowMapNormalMap.frag  AnimationSunLightShadowMapNormalMap.vert  AnimationSunLightShadowMapNormalMapHeightMap.frag  SimpleModel.frag  SimpleSunLight.frag  SimpleSunLight.vert  SimpleSunLightShadowMap.frag  SimpleTex.vert  (+6 more)
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+16 files in other folders)
